# langchain-finance-advisor

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  api.py
app/agents/: finance_agent.py
app/data/: finance_knowledge.py
app/tools/: finance_tools.py
docs/: index.html
tests/: test_smoke.py
